2007-07-04  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-maemo/tny-maemo-conic-device.c:
	(on_dummy_connection_check): Changed the check for a NULL iap
	(though it should have worked already) to ensure that the signal 
	is always emitted at initialization.
	(tny_maemo_conic_device_force_online): Do not just return if we 
	are in scratchbox. Nothing here is libconic-specific. This 
	makes is_online() return the correct value after calling force_online().

2007-07-04  Johannes Schmid <johannes.schmid@openismus.com>

	* libtinymail/tny-merge-folder.c:
	Added API doc

2007-07-04  Johannes Schmid <johannes.schmid@openismus.com>

	* libtinymail/tny-merge-folder.[ch]:
	Added tny_merge_folder_set_folder_type() API to be able
	to assign a different folder type to a tny-merger-folder

	* This was a major API change

2007-07-04  Philip Van Hoof  <pvanhoof@gnome.org>

	* Implementation of tny_folder_poke_status for the total count of a
	POP folder

2007-07-04  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-maemo/tny-maemo-conic-device.c:
	(on_dummy_connection_check): Move this to before the first use.
	(tny_maemo_conic_device_is_online): Put use of on_dummy_connection_check() 
	in an ifdef to avoid a linker failure.

2007-07-04  Murray Cumming  <murrayc@murrayc.com>

	* libtinymail-maemo/tny-maemo-conic-device.c:
	(on_dummy_connection_check): Set is_online here instead of waiting for it to be 
	set in the signal, becacuse this is used to do a quick check without waiting for the timout 
	to check the file.
	(tny_maemo_conic_device_is_online): In the dummy scratchbox implementation, call 
	on_dummy_connection_check() before returning is_online, so that it is accurate.

	(tny_maemo_conic_device_instance_init),
	(tny_maemo_conic_device_finalize): Don't use libconic at all if we are in scratchbox, 
	because it signals that there is no connection, which confuses our dummy implementation.

2007-07-04  Philip Van Hoof  <pvanhoof@gnome.org>
