@@ -20,7 +20,6 @@ online/offline status.
 
 <!-- ##### STRUCT TnyDevice ##### -->
 <para>
-
 </para>
 
 
