@@ -187,6 +187,7 @@ tny_gnome_device_instance_init (GTypeInstance *instance, gpointer g_class)
 }
 
 
+
 /**
  * tny_gnome_device_new:
  *
